--- a/prepros.config
+++ b/prepros.config
@@ -142,6 +142,9 @@
           "node_modules",
           "bower_components"
         ],
+        "devMode": true,
+        "globals": [],
+        "externals": [],
         "babel": {
           "enable": true,
           "options": {
@@ -321,6 +324,7 @@
           "braces": false,
           "comments": "none",
           "inline_script": true,
+          "keep_numbers": false,
           "keep_quoted_props": false,
           "preamble": null,
           "quote_keys": false,
@@ -438,7 +442,6 @@
         "preserveConstEnums": false,
         "jsxFactory": "React.createElement",
         "removeComments": false,
-        "rootDir": "",
         "skipLibCheck": false,
         "sourceMap": false,
         "strict": false,
@@ -451,7 +454,8 @@
         "target": "ES3",
         "resolveJsonModule": false,
         "esModuleInterop": false,
-        "useDefineForClassFields": false
+        "useDefineForClassFields": false,
+        "rootDir": ""
       }
     },
     "fileTypes": {
@@ -573,7 +577,8 @@
           "extension": ".css",
           "type": "SOURCE_RELATIVE",
           "relativePath": "",
-          "suffix": "-dist"
+          "suffix": "-dist",
+          "alwaysSuffix": false
         }
       },
       "javascript": {
@@ -609,7 +614,8 @@
           "extension": ".js",
           "type": "SOURCE_RELATIVE",
           "relativePath": "",
-          "suffix": "-dist"
+          "suffix": "-dist",
+          "alwaysSuffix": false
         }
       },
       "stylus": {
@@ -770,10 +776,10 @@
           ]
         }
       },
-      "kit": {
+      "turf": {
         "extensions": [
-          ".kit",
-          ".turf"
+          ".turf",
+          ".kit"
         ],
         "autoCompile": true,
         "tasks": [
@@ -884,6 +890,33 @@
           "extension": ".svg",
           "type": "SOURCE_RELATIVE",
           "relativePath": ""
+        }
+      },
+      "kit": {
+        "extensions": [
+          ".kit",
+          ".turf"
+        ],
+        "autoCompile": true,
+        "tasks": [
+          {
+            "task": "turf",
+            "enable": true
+          },
+          {
+            "task": "minify-html",
+            "enable": false
+          }
+        ],
+        "output": {
+          "extension": ".html",
+          "type": "REPLACE_SEGMENTS",
+          "segments": [
+            {
+              "segment": "turf",
+              "replaceWith": "html"
+            }
+          ]
         }
       }
     },
