put favicons in a folder

--- a/prepros.config
+++ b/prepros.config
@@ -354,6 +354,18 @@
       "png": {
         "quality": 90
       },
+      "postcss-import": {
+        "ignoreKeywords": [],
+        "sourceMap": false
+      },
+      "postcss-preset-env": {
+        "stage": 2,
+        "browsers": [
+          "> 2%",
+          "not dead"
+        ],
+        "sourceMap": false
+      },
       "pug": {
         "pretty": true
       },
@@ -563,6 +575,14 @@
           {
             "task": "copy",
             "enable": true
+          },
+          {
+            "task": "postcss-import",
+            "enable": false
+          },
+          {
+            "task": "postcss-preset-env",
+            "enable": false
           },
           {
             "task": "autoprefixer",
