Fix for broken search

--- a/prepros.config
+++ b/prepros.config
@@ -82,11 +82,15 @@
       "remotePath": "",
       "timeout": 20000,
       "autoUpload": false,
+      "reuseConnection": true,
       "connectionType": "ftp",
       "history": []
     },
     "packages": {
       "createPackageLock": true
+    },
+    "images": {
+      "preserveOriginal": true
     },
     "tasks": {
       "autoprefixer": {
@@ -111,13 +115,15 @@
                 "> 2%",
                 "not dead"
               ],
-              "preserveImports": false
+              "preserveImports": false,
+              "polyfills": false
             }
           },
           "@babel/preset-react": true,
           "@babel/preset-flow": false
         },
         "plugins": {
+          "@babel/plugin-proposal-class-static-block": false,
           "@babel/plugin-proposal-class-properties": false,
           "@babel/plugin-proposal-decorators": {
             "enable": false,
@@ -127,6 +133,7 @@
           },
           "@babel/plugin-proposal-export-namespace-from": false,
           "@babel/plugin-proposal-function-sent": false,
+          "@babel/plugin-proposal-logical-assignment-operators": false,
           "@babel/plugin-proposal-nullish-coalescing-operator": false,
           "@babel/plugin-proposal-numeric-separator": false,
           "@babel/plugin-proposal-optional-chaining": false,
@@ -157,13 +164,15 @@
                     "> 2%",
                     "not dead"
                   ],
-                  "preserveImports": false
+                  "preserveImports": false,
+                  "polyfills": false
                 }
               },
               "@babel/preset-react": true,
               "@babel/preset-flow": false
             },
             "plugins": {
+              "@babel/plugin-proposal-class-static-block": false,
               "@babel/plugin-proposal-class-properties": false,
               "@babel/plugin-proposal-decorators": {
                 "enable": false,
@@ -173,6 +182,7 @@
               },
               "@babel/plugin-proposal-export-namespace-from": false,
               "@babel/plugin-proposal-function-sent": false,
+              "@babel/plugin-proposal-logical-assignment-operators": false,
               "@babel/plugin-proposal-nullish-coalescing-operator": false,
               "@babel/plugin-proposal-numeric-separator": false,
               "@babel/plugin-proposal-optional-chaining": false,
@@ -208,6 +218,7 @@
       },
       "dart-sass": {
         "indentType": "space",
+        "allowWildcardImports": false,
         "indentWidth": 2,
         "linefeed": "lf",
         "sourceMap": false
@@ -295,6 +306,7 @@
           "properties": true,
           "pure_funcs": [],
           "pure_getters": false,
+          "reduce_funcs": true,
           "reduce_vars": true,
           "sequences": true,
           "side_effects": true,
@@ -344,6 +356,7 @@
       },
       "node-sass": {
         "indentType": "space",
+        "allowWildcardImports": false,
         "indentWidth": 2,
         "linefeed": "lf",
         "outputStyle": "expanded",
@@ -353,6 +366,18 @@
       },
       "png": {
         "quality": 90
+      },
+      "postcss-import": {
+        "ignoreKeywords": [],
+        "sourceMap": false
+      },
+      "postcss-preset-env": {
+        "stage": 2,
+        "browsers": [
+          "> 2%",
+          "not dead"
+        ],
+        "sourceMap": false
       },
       "pug": {
         "pretty": true
@@ -563,6 +588,14 @@
           {
             "task": "copy",
             "enable": true
+          },
+          {
+            "task": "postcss-import",
+            "enable": false
+          },
+          {
+            "task": "postcss-preset-env",
+            "enable": false
           },
           {
             "task": "autoprefixer",
